...
      _userId = result['user']['id'];
      await loadTasksOfflineFirst();

      notifyListeners();
      return true;
    } else {
      _errorMessage = 'Login gagal. Periksa email dan password.';
      notifyListeners();
      return false;
    }
  }

  // Register
...
